--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <h1>About me</h1>
                         <p>I'm a highly  motivated  and  detail-oriented  IT  fresher  seeking 
                              a challenging  position  in  a dynamic  organization  to  utilize 
-                              my technical  skills,  passion  for  problem-solving,  andwillingness
+                              my technical  skills,  passion  for  problem-solving,  and willingness
                                to learn and grow.</p>
                         <div class="tab-titles">
                             <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -51,16 +51,17 @@
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
                                 <li><span>Proficient in Python</span></li>
-                                <li><span>Proficient in C language</span></li>
-                                <li><span>Beginner in Java</span></li>
-                                <li><span>Excellent communication</span></li>
+                                <li><span>Proficient in Java</span></li>
+                                <li><span>Beginner in Web Development</span></li>
+                                <li><span>Interpersonal skill</span></li>
                                 <li><span>Strong Problem-solving abilities</span></li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="software">
                             <ul>
-                                <li><span>MS Office</span></li>
                                 <li><span>VS code</span></li>
+                                <li><span>MS Office</span></li>
+                
                             </ul>
                         </div>
                         <div class="tab-contents" id="education">
@@ -82,12 +83,12 @@
                     <div>
                         <i class="fa-brands fa-app-store" style="color: #ffff00;"></i>
                         <h2>Web application Development</h2>
-                        <p>Developing the web application using Python.</p>
+                        <p>Developing the interactive web site.</p>
                         <a href="#">Learn More</a>
                     </div>
                     <div>
                         <i class="fa-sharp fa-solid fa-code" style="color: #ffff00;"></i>
-                        <h2>Web site Development</h2>
+                        <h2>Software Development</h2>
                         <p>Developing the web site using HTMl, CSS, JAVA SCRIPT and many more...</p>
                         <a href="#">Learn More</a>
                     </div>
