--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@
                         </div>
                         <div class="tab-contents" id="education">
                             <ul>
-                                <li><span>2019-2023</span><br>B.tech Information Technology at University College of Engineering, Villupuram.</li>
-                                <li><span>2018-2019</span><br>HSC at John Dewey Mt.Hr.Sec.School, Villupuram</li>
-                                <li><span>2016-2017</span><br>SSLC at John Dewey Mt.Hr.Sec.School, Villupuram</li>
+                                <li><span>2019-2023</span><br>B.tech Information Technology at University College of Engineering, Villupuram.
+                                CGPA:8.31</li>
+                                <li><span>2018-2019</span><br>HSC at John Dewey Mt.Hr.Sec.School, Villupuram.
+                                77.1%</li>
+                                <li><span>2016-2017</span><br>SSLC at John Dewey Mt.Hr.Sec.School, Villupuram.
+                                89.8%</li>
                             </ul>
                         </div>
                     </div>
